--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
       <main>
         
-         <h1>Aspire *    Aspirer <br>
-         Create  *       Créer <br>
-         Glow    *       Éclater 
+         <h1>Imagine *    Imaginer <br>
+        Build  *       Bâtir <br>
+        Sparkle    *       Scintiller
          </h1>
          <p>Stay Tuned  &nbsp À très bientôt</p>
          <p2> Meanwhile... Entre-temps... <br>
