--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
 
       <main>
         
-         <h1>Imagine * Imaginer <br>
-        Build * Bâtir <br>
-        Sparkle * Scintiller
+         <h1>Imagine &nbsp Imaginer &nbsp Build &nbsp Bâtir &nbsp Sparkle &nbsp Scintiller
          </h1>
          <p>Stay Tuned  &nbsp À très bientôt</p>
          <p2> Meanwhile... Entre-temps... <br>
