--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
       <main>
         
-         <h1>Imagine * Imaginer * Build * Bâtir * Sparkle * Scintiller
+         <h1>Imagine * Imaginer <br> Build * Bâtir <br> Sparkle * Scintiller <br>
          </h1>
          <p>Stay Tuned  &nbsp À très bientôt</p>
          <p2> Meanwhile... Entre-temps... <br>
