--- a/index.html
+++ b/index.html
@@ -8,15 +8,12 @@
 </head>
 <body>
 
- 
-
-
-  
-
-      <main>
-   
+       
       <div class="container">
-          <div class="col"<h1>box1</h1></div> 
+          <div class="col"<h1>TEST</h1></div> 
+ 
+      <main>
+
            
          <h1>Imagine * Imaginer <br> Build * Bâtir <br> Sparkle * Scintiller <br>
          </h1>
