--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </div>
          
                 <div class="card3">
-                 <h1>Sparkle * Scintiller </h2>
+                 <h1>Standout * Ressortir </h2>
                 </div>
         
                 <p1>Stay Tuned  &nbsp À très bientôt</p>
