--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ Identity, Web, Presentations, Social, Video, Digital Ads, Packaging, Look-Books,
         
                 <p2>Stay Tuned  &nbsp À très bientôt</p>
                 <p2> Travel blog now featured on: <br>
-                <a href="http://www.theboldandcurious.com"> <img src=THE-BOLD_AND_CURIOUS_LOGO.svg alt="logo for bold and curious"> </a> </p2> 
+                <a href="http://www.theboldandcurious.com"> <img src=THE-BOLD_AND_CURIOUS_LOGO.svg alt="theboldandcurious.com"> </a> </p2> 
 
         
       </main>
