--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
                 <div class="cards">
                 <div class="card1">
-                 <img src=ch-logo-100px.png alt="ch"> 
+                 <img src=chlogo2.gif alt="ch"> 
                     
                     
                  <h1> Branding, Strategy & Design </h1>  
