--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
                 <div class="cards">
                 <div class="card1">
-                 <h1><img src=images/ch-logo-8.png alt="ch"></h1> 
+                 <h1><img src=images/ch-logo.png alt="ch"></h1> 
                     
                     
                  <h1> Branding, Strategy & Design </h1>  
