--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
          
                 <div class="card2">
                  <p1>
-Identity, Web, Presentations, Social, Video, Digital Ads, Packaging, Look-Books, Events, Short & Long term plans & more!</p>
+Identity, Web, Presentations, Social, Video, Digital Ads, Packaging, Look-Books, Events, Plans </p>
                 </div>
          
                 <div class="card3">
