--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
          
                 <div class="card2">
                  <p1>
-Identity, Web, Presentations, Social, Video, Digital Ads, Packaging, Look-Books, Events, Plans </p>
+Plan | Identity | Web | Presentations | Social | Video | Digital Ads | Packaging | Look-Books | Events</p>
                 </div>
          
                 <div class="card3">
