--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
                 <div class="cards">
                 <div class="card1">
-                 <h1><img src=images/ch-logo.png alt="ch"></h1> 
+                 <h1><img src=images/ch-logo_1.png alt="ch"></h1> 
                     
                     
                  <h1> Branding, Strategy & Design </h1>  
