--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@ Plan | Identity | Web | Presentations | Social | Video | Digital Ads | Packaging
                 </p>
         
                 <p2>Stay Tuned for new site | Site en développement</p>
+                <p2> <a href = "mailto: contact@claudinehart.com">Contact </a></p>
                 <p2> Travel blog now featured on: <br>
                 <a href="http://www.theboldandcurious.com"> <img src=images/theboldandcurious-logo_1@3x.png  alt="theboldandcurious.com"> </a> </p2> 
 
