--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Plan | Identity | Web | Presentations | Social | Video | Digital Ads | Packaging
                  <p2>My  purpose is to help you show & tell a compelling story using just enough data, engaging content and effective media plans. My process ensures that you stay relevant, meaningful & simply outstanding! </h2>
                 </p>
         
-                <p2>Stay Tuned for new site | Site en développement</p>
+                <p2>Stay tuned for new site | Site en développement</p>
                 <p2> <a href = "mailto: contact@claudinehart.com">Contact </a></p>
                 <p2> Travel blog now featured on: <br>
                 <a href="http://www.theboldandcurious.com"> <img src=images/theboldandcurious-logo_1@3x.png  alt="theboldandcurious.com"> </a> </p2> 
