--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
          
                 <div class="card2">
                  <p1>
-Plan | Identity | Web | Presentations | Social | Video | Digital Ads | Packaging | Look-Books | Events</p>
+Planning | Identity | Web Design | Presentations | Social-Media | Video | Digital Ads | Packaging | Look-Books | Events</p>
                 </div>
          
                 <div class="card3">
