--- a/blog.html
+++ b/blog.html
@@ -2,5 +2,5 @@
   <meta http-equiv="refresh" content="5; URL=https://www.theboldandcurious.com/" />
 </head>
 <body>
-  <p>If you are not redirected in five seconds, <a href="https://https://www.theboldandcurious.com/">click here</a>.</p>
+  <p>If you are not redirected in five seconds, <a href="https://www.theboldandcurious.com/">click here</a>.</p>
 </body>
